--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
     "gulp-imagemin": "^3.1.1",
     "imagemin-pngquant": "^5.0.0",
     "gulp-cache": "^0.4.5",
-    "gulp-clean": "^0.3.2"
+    "gulp-clean": "^0.3.2",
+    "gulp-html-import": "^0.0.2",
+    "gulp-tap": "^0.1.3",
+    "browser-sync": "^2.18.8",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
+    "yargs": "^7.0.1"
   }
 }
